[package]
name = "dataset"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
futures = "0.3"
anyhow = "1"
flate2 = "1"
tokio = { version = "1"}
reqwest = { version = "0.11", features = ["stream"] }